cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__library_command@stdout-Library { command: Health }.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
Ok(
    LibraryHealth {
        artists: 1,
        albums: 1,
        songs: 1,
        unanalyzed_songs: Some(
            0,
        ),
        playlists: 1,
        collections: 1,
        orphaned_artists: 0,
        orphaned_albums: 0,
        orphaned_playlists: 0,
        orphaned_collections: 0,
    },
)
