cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__library_command@stdout-Library { command: List { full: true, target: Songs } }.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
Songs:
	song:01J1K5B6RJ84WJXCWYJ5WNE12E: "Test Song"
