cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__playback_command@stdout-Playback { command: Pause }.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
playback paused
