cli/src/handlers/snapshots/mecomp_cli__handlers__smoke_tests__playback_command@stdout-Playback { command: Seek { command: Backward { amount: 0.0 } } }.snap
---
source: cli/src/handlers/smoke_tests.rs
expression: "String::from_utf8(stdout.0.clone()).unwrap()"
---
Daemon response:
seeked backward by 0.00s
